--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,5 @@
 name: Playwright Tests
+
 on:
   push:
     branches: [ main, master ]
@@ -7,41 +8,65 @@ on:
 
 jobs:
   test:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
+    timeout-minutes: 60
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: lts/*
+          node-version: 22
+          cache: npm
+          
+
       - name: Install dependencies
-        run: npm ci
-      - name: Install Playwright Browsers
+        run: npm ci  
+
+      - name: Install Playwright browsers + Linux deps
         run: npx playwright install --with-deps
 
-      # ✅ Preflight check before running tests
-      - name: "Preflight: check BASE_URL reachability"
-  env:
-    BASE_URL: ${{ secrets.BASE_URL }}
-  run: |
-    if [ -z "$BASE_URL" ]; then 
-      echo "❌ BASE_URL empty"; 
-      exit 1; 
-    fi
-    echo "Checking $BASE_URL ..."
-    curl -kL --max-time 10 -I "$BASE_URL" || (echo "❌ Unreachable from runner"; exit 1)
-
-
-      - name: Run Playwright tests
+      # Run only Chromium + Firefox for now; add --project=webkit later if needed
+      - name: Run Playwright tests (Chromium + Firefox)
         env:
           BASE_URL: ${{ secrets.BASE_URL }}
-          USER_EMAIL: ${{ secrets.USER_EMAIL }}
-          USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
-        run: npx playwright test
+          USERNAME: ${{ secrets.USER_EMAIL }}
+          PASSWORD: ${{ secrets.USER_PASSWORD }}
+        run: npx playwright test --project=chromium --project=firefox
 
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+      # Upload HTML report even on failure
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
+          retention-days: 30
+
+      # Upload traces (from test-results/**/trace.zip)
+      - name: Upload Playwright traces
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-traces
+          path: test-results/**/trace.zip
+          retention-days: 30
+
+      #Upload videos/screenshots if you want them too
+      - name: Upload Playwright videos
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-videos
+          path: test-results/**/video.webm
+          retention-days: 14
+
+      - name: Upload Playwright screenshots
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-screens
+          path: test-results/**/*.png
           retention-days: 14
