bunch of yaml changes

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Playwright E2E (Docker Compose - tests only)
 
 on:
   push:
@@ -7,37 +7,25 @@ on:
     branches: [ main, master ]
 
 jobs:
-  test:
+  e2e:
     runs-on: ubuntu-latest
     timeout-minutes: 60
+
+    # Secrets feed directly into the tests container
+    env:
+      BASE_URL: ${{ secrets.BASE_URL }}         
+      USER_EMAIL: ${{ secrets.USER_EMAIL }}      
+      USER_PASSWORD: ${{ secrets.USER_PASSWORD }}# e.g. improvement
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: npm
-          
+      - name: Run Playwright tests in Docker
+        run: docker compose up --exit-code-from tests tests
 
-      - name: Install dependencies
-        run: npm ci  
-
-      - name: Install Playwright browsers + Linux deps
-        run: npx playwright install --with-deps
-
-      # Run only Chromium + Firefox for now; add --project=webkit later if needed
-      - name: Run Playwright tests (Chromium + Firefox)
-        env:
-          BASE_URL: ${{ secrets.BASE_URL }}
-          USERNAME: ${{ secrets.USER_EMAIL }}
-          PASSWORD: ${{ secrets.USER_PASSWORD }}
-        run: npx playwright test --project=chromium --project=firefox
-
-      # Upload HTML report even on failure
-      - name: Upload Playwright report
+      # Artifacts
+      - name: Upload Playwright HTML report
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -45,7 +33,6 @@ jobs:
           path: playwright-report/
           retention-days: 30
 
-      # Upload traces (from test-results/**/trace.zip)
       - name: Upload Playwright traces
         if: always()
         uses: actions/upload-artifact@v4
@@ -54,7 +41,6 @@ jobs:
           path: test-results/**/trace.zip
           retention-days: 30
 
-      #Upload videos/screenshots if you want them too
       - name: Upload Playwright videos
         if: always()
         uses: actions/upload-artifact@v4
